Оформляет декоративные элементы главной страницы

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,7 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
 .page-header {
   margin: 0 auto;
   padding: 0;
@@ -61,7 +62,11 @@ body {
 }
 
 .logo-link {
-  margin-right: 30px;
+  margin-right: 169px;
+}
+
+.logo-link img {
+  position: absolute;
 }
 
 .navigation-list {
@@ -75,6 +80,7 @@ body {
 }
 
 .navigation-link {
+  position: relative;
   display: block;
   padding: 20px 17px;
   font-size: 20px;
@@ -82,8 +88,17 @@ body {
   font-weight: 700;
   color: #000000;
   text-decoration: none;
-  min-width: 42px;
-  min-height: 66px;
+  min-width: 20px;
+  min-height: 26px;
+}
+
+.navigation-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
 }
 
 .navigation-user {
@@ -91,7 +106,7 @@ body {
 }
 
 .navigation-user .navigation-link {
-  padding: 24px 12px;
+  padding: 22px 18px;
 }
 
 .navigation-user .navigation-link--button {
@@ -102,7 +117,10 @@ body {
   min-height: 37px;
   text-align: center;
   padding: 9px 15px;
+  margin-left: 20px;
   text-transform: uppercase;
+  border: none;
+  border-radius: 4px;
 }
 
 .main-container {
@@ -269,6 +287,8 @@ body {
   text-decoration: none;
   width: 575px;
   padding: 15px;
+  border: none;
+  border-radius: 10px;
 }
 
 .subscription {
@@ -307,14 +327,17 @@ body {
   font-weight: 700;
   color: #ffffff;
   background-color: #83B3D3;
+  text-align: center;
   text-transform: uppercase;
-  border: none
+  padding: 18px 34px 16px;
+  border: none;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .page-footer {
   line-height: 26px;
-  color: #333333;
-  text-align: center;  
+  color: #333333; 
 }
 
 .page-footer-container {
@@ -325,11 +348,14 @@ body {
   background-color: #ffffff;
 }
 
+.footer-social {
+  min-width: 130px;
+}
+
 .footer-social-list {
   display: flex;
   flex-wrap: wrap; 
-  width: 160px;
-  list-style: none;
+  list-style-type: none;
   margin: 0;
   padding: 0;
 }
@@ -343,6 +369,24 @@ body {
 
 .footer-social-item:nth-child(3n) {
   margin-right: 0;
+}
+
+.footer-social-link {
+  position: relative;
+  display: block;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 16px 16px;
+}
+
+.social-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
 }
 
 .contacts {
@@ -362,12 +406,12 @@ body {
 }
 
 .htmlacademy-link {
-  display: block;
+  width: 130px;
+  margin-left: auto;
 }
 
 .inner-block {
   background: url("../images/filter-background.jpg");
-  background-size: 100% auto;
   background-repeat: no-repeat;
   color: #ffffff;
   background-color: #83B3D3;
@@ -380,25 +424,23 @@ body {
 
 .inner-header-title {
   font-size: 60px;
-  line-height: 78px;
+  line-height: 77px;
   margin: 0;
+  height: 68px;
 }
 
 .breadcrumbs {
   display: flex;
+  font-size: 16px;
+  line-height: 21px;
   margin: 0;
   padding: 0;
   list-style-type: none;
+  text-decoration: none;
 }
 
 .breadcrumbs-item {
   margin-right: 11px;
-}
-
-.breadcrumbs-link {
-  font-size: 16px;
-  line-height: 21px;
-  text-decoration: none;
 }
 
 .catalog-filter-form {
@@ -430,23 +472,22 @@ body {
   margin-bottom: 13px;
 }
 
-.some-box {
-  display: block;
+.catalog-filter-prise {
   width: 287px;
   margin-left: auto;
   margin-right: 81px;
 }
 
-.catalog-filter-prise {
+.catalog-filter-prise-level {
   font-size: 20px;
   line-height: 26px;
   margin: 0;
 }
 
-.catalog-filter-bottons {
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
+.catalog-filter-choice {
+  width: 160px;
+  text-align: center;
+  align-self: end;
 }
 
 .control-input {
@@ -468,9 +509,11 @@ body {
   background: #83B3D3;
   text-align: center;
   text-transform: uppercase;
-  border: none;
   padding: 13px 35px;
   margin-bottom: 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .button--reset {
@@ -481,6 +524,7 @@ body {
   border: none;
   background-color: transparent;
   padding: 4px 13px;
+  cursor: pointer;
 }
 
 .select {
@@ -514,7 +558,10 @@ body {
   width: 287px;
   height: 48px;
   color: #333333;
-  padding-left: 19px ;
+  padding-left: 19px;
+  border: #E5E5E5 solid 2px;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .sorting-container .button {
@@ -522,6 +569,7 @@ body {
   height: 48px;
   border: #000000 solid 2px;
   padding: 16px;
+  border-radius: 4px;
 }
 
 .sorting-container .button:not(:last-child) {
@@ -590,6 +638,8 @@ body {
   text-transform: uppercase;
   text-decoration-line: none;
   padding: 9px;
+  border: none;
+  border-radius: 4px;
 }
 
 .button--hotel-like {
@@ -602,6 +652,8 @@ body {
   text-transform: uppercase;
   text-decoration-line: none;
   padding: 9px;
+  border: none;
+  border-radius: 4px;
 }
 
 .button--hotel-like-in {
@@ -625,6 +677,8 @@ body {
   text-transform: uppercase;
   width: 160px;
   padding: 9px;
+  border: none;
+  border-radius: 4px;
 }
 
 .button-line {
@@ -645,6 +699,9 @@ body {
   width: 620px;
   padding: 17px;
   margin: 0 auto;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .pagination-container {
@@ -672,6 +729,9 @@ body {
   background: #83B3D3;
   text-align: center;
   padding: 14px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .pagination-item:not(:last-child) {
@@ -691,6 +751,9 @@ body {
 .pagination-control {
   width: 160px;
   height: 48px;
+  border: #E5E5E5 solid 2px;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .subscription--no-image {
