--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,7 +66,15 @@ body {
 }
 
 .logo-link {
+  position: relative;
+  width: 139px;
   z-index: 1;
+  outline-offset: 0;
+  outline: 0;
+}
+
+.logo {
+  position: absolute;
 }
 
 .navigation-list {
@@ -80,9 +88,13 @@ body {
   list-style-type: none;
 }
 
+.navigation-item {
+  position: relative;
+}
+
 .navigation-link {
   position: relative;
-  display: inline-block;
+  display: block;
   padding: 20px 17px;
   font-size: 20px;
   line-height: 26px;
@@ -99,6 +111,16 @@ body {
   color: rgba(117, 98, 87, 0.3);
 }
 
+.navigation-link-current::before {
+  position: absolute;
+  bottom: -1px;
+  width: 68px;
+  height: 2px;
+  background-color: #756257;
+  content: "";
+  z-index: 1;
+}
+
 .navigation-icon {
   position: absolute;
   top: 0;
@@ -108,11 +130,11 @@ body {
   margin: auto;
 }
 
-.navigation-icon:hover > path {
+.navigation-link:hover .navigation-icon {
   fill: #756257;
 }
 
-.navigation-icon:active > path {
+.navigation-link:active .navigation-icon {
   fill: rgba(117, 98, 87, 0.3);
 }
 
@@ -128,16 +150,6 @@ body {
   position: relative;
 }
 
-.navigation-link-current::before {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  width: 68px;
-  height: 2px;
-  background-color: #756257;
-  z-index: 1;
-}
-
 .navigation-link-current-catalog::before {
   content: "";
   position: absolute;
@@ -148,26 +160,26 @@ body {
   z-index: 1;
 }
 
-.number-like::before {
+.number-like {
   position: absolute;
+  display: block;
   font-family: inherit;
   font-size: 10px;
   line-height: 13px;
   color: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
+  margin: 0;
+  padding: 2px;
   top: 17px;
   left: 25px;
   width: 19px;
   height: 19px;
   background-color: #7DB550;
-  content: "12";
   border-radius: 50%;
-  z-index: 1;
+  cursor: pointer;
 }
 
-.number-like:active::before {
+.number-like:active {
   color: rgba(255, 255, 255, 0.3);
 }
 
@@ -198,6 +210,7 @@ body {
 
 .navigation-link--button:focus-visible {
   background-color: #615048;
+  outline-offset: 0;
   outline: #83B3D3 solid 3px;
 }
 
@@ -298,6 +311,7 @@ body {
   width: 400px;
   background-color: #F0F6FA;
   padding: 184px 75px 89px;
+  background-repeat: no-repeat;
 }
 
 .advantages-item:nth-child(2n) {
@@ -334,19 +348,16 @@ body {
 
 .advantages-item-housing {
   background-image: url("../images/housing.svg");
-  background-repeat: no-repeat;
   background-position: center top 89px;  
 }
 
 .advantages-item-food {
   background-image: url("../images/food.svg");
-  background-repeat: no-repeat;
   background-position: center top 91px;  
 }
 
 .advantages-item-gifts {
   background-image: url("../images/gifts.svg");
-  background-repeat: no-repeat;
   background-position: center top 85px;  
 }
 
@@ -401,6 +412,7 @@ body {
 
 .search-button:focus-visible {
   background-color: #615048;
+  outline-offset: 0;
   outline: #83B3D3 solid 3px;
 }
 
@@ -519,6 +531,7 @@ body {
 }
 
 .footer-social-item {
+  position: relative;
   width: 40px;
   height: 40px;
   margin-right: 3px;
@@ -545,20 +558,19 @@ body {
   bottom: 0;
   left: 0;
   margin: auto;
+  fill: #83B3D3;
 }
 
-.social-icon:hover > path {
+.footer-social-link:hover .social-icon {
   fill: #68A2CA;
 }
 
-.social-icon:active > path {
+.footer-social-link:active .social-icon {
   fill: rgba(104, 162, 202, 0.3);
 }
 
-.social-icon:focus-visible > path {
+.footer-social-link:focus-visible .social-icon {
   fill: #68A2CA;
-  outline: #83B3D3 solid 3px;
-  border-radius: 10px;
 }
 
 .footer-social-link:focus-visible {
@@ -639,18 +651,61 @@ body {
   height: 68px;
 }
 
-.breadcrumbs {
+.breadcrumbs-list {
+  position: relative;
   display: flex;
-  font-size: 16px;
-  line-height: 21px;
+  align-items: center;
   margin: 0;
   padding: 0;
   list-style-type: none;
-  text-decoration: none;
 }
 
 .breadcrumbs-item {
-  margin-right: 11px;
+  position: relative;
+  margin-right: 16px;
+}
+
+.breadcrumbs-item::after {
+  position: absolute;
+  top: 7px;
+  right: -14px;
+  width: 8px;
+  height: 8px;
+  content: "";
+  background-image: url("../images/nav-link.svg");
+  background-repeat: no-repeat;
+}
+
+.breadcrumbs-item:last-child:after {
+  content: none;
+}
+
+.breadcrumbs-link {
+  position: relative;
+  display: block;
+  font-size: 16px;
+  line-height: 21px;
+  color: #ffffff;
+  text-decoration: none;
+  padding: 0 5px;
+}
+
+.breadcrumbs-link:hover {
+  opacity: 60%;
+}
+
+.breadcrumbs-link:focus-visible {
+  outline: #83B3D3 solid 3px;
+  outline-offset: 3px;
+  border-radius: 4px;
+}
+
+.breadcrumbs-link:active {
+  opacity: 30%;
+}
+
+.breadcrumbs-icon {
+  fill: #ffffff;
 }
 
 .catalog-filter-form {
@@ -668,6 +723,7 @@ body {
   font-size: 20px;
   line-height: 26px;
   margin: 0;
+  padding: 0;
   margin-bottom: 30px;
 }
 
@@ -678,7 +734,7 @@ body {
 }
 
 .catalog-filter-item:not(:last-child) {
-  margin-bottom: 13px;
+  margin-bottom: 12px;
 }
 
 .catalog-filter-prise {
@@ -729,8 +785,35 @@ body {
   font-size: 18px;
   line-height: 23px;
   background-color: transparent;
-  padding: 4px 13px;
+  padding: 0 13px;
   border-radius: 4px;
+}
+
+.button--submit:focus-visible {
+  background-color: #68A2CA;
+  outline: rgba(255, 255, 255, 1) solid 3px;
+}
+
+.button--submit:hover{
+  background-color: #68A2CA;
+}
+
+.button--submit:active {
+  background-color: #68A2CA;
+  color: rgba(255, 255, 255, 0.3);
+  outline: #756257 solid 1px;
+}
+
+.button--reset:focus-visible {
+  outline: #83B3D3 solid 3px;
+}
+
+.button--reset:hover{
+  opacity: 60%;
+}
+
+.button--reset:active {
+  opacity: 30%;
 }
 
 .select {
@@ -765,9 +848,23 @@ body {
   height: 48px;
   color: #333333;
   padding-left: 19px;
-  border: #E5E5E5 solid 2px;
+  border: 0;
+  outline: #E5E5E5 solid 2px;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.select-control:hover {
+  outline: #83B3D3 solid 2px;
+}
+
+.select-control:focus-visible {
+  outline-offset: 0;
+  outline: #83B3D3 solid 2px;
+}
+
+.select-control:active {
+  outline: #E5E5E5 solid 2px;
 }
 
 .card-grid-toggle {
@@ -786,7 +883,7 @@ body {
 }
 
 .card-grid-toggle:hover,
-.card-grid-toggle:focus {
+.card-grid-toggle:focus-visible {
   outline: #83B3D3 solid 2px;
 }
 
@@ -854,6 +951,24 @@ body {
   margin: 0;
 }
 
+.hotel-card-link:hover {
+  opacity: 60%;
+}
+
+.hotel-card-link:active {
+  opacity: 30%;
+}
+
+.hotel-card-link:focus-visible {
+  outline-offset: 0;
+  outline: #83B3D3 solid 3px;
+}
+
+.hotel-card-link-title:focus-visible {
+  outline-offset: 0;
+  outline: #83B3D3 solid 3px;
+}
+
 .button--hotel-card {
   font-size: 16px;
   line-height: 21px;
@@ -886,8 +1001,9 @@ body {
   background: #7DB54F;
 }
 
-.button--hotel-card:focus {
+.button--hotel-card:focus-visible {
   background-color: #615048;
+  outline-offset: 0;
   outline: #83B3D3 solid 3px;
 }
 
@@ -900,24 +1016,28 @@ body {
   color: rgba(255, 255, 255, 0.3);
 }
 
-.button--hotel-like:focus {
+.button--hotel-like:focus-visible {
   background-color: #68A2CA;
+  outline-offset: 0;
   outline: #756257 solid 3px;
 }
 
 .button--hotel-like:hover{
   background-color: #68A2CA;
+  outline-offset: 0;
   outline: #756257 solid 1px;
 }
 
 .button--hotel-like:active {
   background-color: #68A2CA;
   color: rgba(255, 255, 255, 0.3);
+  outline-offset: 0;
   outline: #756257 solid 1px;
 }
 
-.button--hotel-like-in:focus {
+.button--hotel-like-in:focus-visible {
   background-color: #6C9E42;
+  outline-offset: 0;
   outline: #756257 solid 3px;
 }
 
@@ -928,15 +1048,12 @@ body {
 .button--hotel-like-in:active {
   background-color: #6C9E42;
   color: rgba(255, 255, 255, 0.3);
+  outline: none;
 }
 
 .hotel-card-rating {
   display: flex;
   justify-content: space-between;
-}
-
-.rating-stars {
-  display: block;
 }
 
 .rating-number {
@@ -985,6 +1102,7 @@ body {
 
 .button--load:focus-visible {
   background-color: #68A2CA;
+  outline-offset: 0;
   outline: #756257 solid 3px;
 }
 
@@ -1013,7 +1131,7 @@ body {
   background: #83B3D3;
   text-align: center;
   padding: 14px;
-  border: none;
+  text-decoration: none;
   border-radius: 4px;
   cursor: pointer;
 }
@@ -1038,6 +1156,7 @@ body {
 
 .pagination-link:focus-visible {
   background-color: #68A2CA;
+  outline-offset: 0;
   outline: #756257 solid 3px;
 }
 
